Use compatible with Java 8-11 map and list initializing