@@ -8,6 +8,7 @@ import java.nio.file.Files;
 import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class Reversi {
@@ -199,13 +200,13 @@ public class Reversi {
                 dirR -= direction[0];
                 dirC -= direction[1];
                 if (dirR == r && dirC == c) break;
-                tilesToFlip.add(new ArrayList<>(List.of(dirR, dirC)));
+                tilesToFlip.add(new ArrayList<>(Arrays.asList(dirR, dirC)));
             }
         }
 
         playground[r][c] = -1;
         if (tilesToFlip.size() != 0) {
-            tilesToFlip.add(new ArrayList<>(List.of(r, c)));
+            tilesToFlip.add(new ArrayList<>(Arrays.asList(r, c)));
         }
 
         if (tilesToFlip.isEmpty()) {
@@ -274,13 +275,13 @@ public class Reversi {
                         dirR -= direction[0];
                         dirC -= direction[1];
                         if (dirR == r && dirC == c) break;
-                        toFlip.add(new ArrayList<>(List.of(dirR, dirC)));
+                        toFlip.add(new ArrayList<>(Arrays.asList(dirR, dirC)));
                     }
                 }
 
                 playground[r][c] = -1;
                 if (!toFlip.isEmpty()) {
-                    toFlip.add(new ArrayList<>(List.of(r, c)));
+                    toFlip.add(new ArrayList<>(Arrays.asList(r, c)));
                 }
                 if (toFlip.size() == 0) continue;
                 String rString = String.valueOf(r);
