@@ -7,6 +7,7 @@ import java.nio.file.Files;
 import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 
@@ -14,7 +15,7 @@ public class Reversi {
 
     int size;
     Player[][] playground;
-    private HashMap<Player, Integer> left = new HashMap<>() {{ put(Player.B, 0); put(Player.W, 0); }};
+    private HashMap<Player, Integer> left = new HashMap<Player, Integer>() {{ put(Player.B, 0); put(Player.W, 0); }};
     private Player[] players = new Player[] { Player.B, Player.W };
     Player onTurn = Player.NONE;
     Player winner = Player.NONE;
@@ -272,13 +273,13 @@ public class Reversi {
                 r -= direction[0];
                 c -= direction[1];
                 if (r == r0 && c == c0) break;
-                toFlip.add(new ArrayList<>(List.of(r, c)));
+                toFlip.add(new ArrayList<>(Arrays.asList(r, c)));
             }
         }
 
         playground[r0][c0] = Player.NONE;
         if (!toFlip.isEmpty()) {
-            toFlip.add(new ArrayList<>(List.of(r0, c0)));
+            toFlip.add(new ArrayList<>(Arrays.asList(r0, c0)));
         }
         return toFlip;
     }
